new code new vwersion

--- a/calls/templates/admin/includes/quick_calls.html
+++ b/calls/templates/admin/includes/quick_calls.html
@@ -1,7 +1,7 @@
-{% load i18n future %}
+{% load i18n  %}
 
 {% if perms.calls.add_callspost and perms.calls.change_callspost %}
-<script>
+<script> 
 // Format newlines for HTML in the quick calls form, since the content
 // is HTML but the form field is plain text.
 $(function() {
