--- a/forum/templates/forum/forum_post_list_iyph.html
+++ b/forum/templates/forum/forum_post_list_iyph.html
@@ -1,5 +1,5 @@
 {% extends "baseiyph.html" %}
-{% load i18n future mezzanine_tags forum_tags keyword_tags disqus_tags %}
+{% load i18n  mezzanine_tags forum_tags keyword_tags disqus_tags %}
 
 {% block meta_title %}{% trans "Forum" %}{% endblock %}
 
@@ -8,7 +8,7 @@
 {% for keyword in keywords %}
     {% if not forloop.first %}, {% endif %}
     {{ keyword }}
-{% endfor %}
+{% endfor %} 
 {% endmetablock %}{% endblock %}
 
 {% block meta_description %}{% metablock %}
@@ -65,7 +65,7 @@
 {#     {% if page %} #}
 {#     {% block forum_post_list_pagecontent %} #}
 {#     {% editable page.richtextpage.content %} #}
-{#     {{ page.richtextpage.content|richtext_filter|safe }} #}
+{#     {{ page.richtextpage.content|richtext_filters|safe }} #}
 {#     {% endeditable %} #}
 {#     {% endblock %} #}
 {#     {% endif %} #}
@@ -135,7 +135,7 @@
     
     <td>
       {% if user.is_superuser or perms.forum.add_forumpost  %} {#and request.user.get_profile.user_id  == forum_post.user_id#}
-            <a class="small pull-right" href="/admin/forum/forumpost/{{ forum_post.id }}"><i class="icon-edit"></i> Edit as Admin</a><br>
+            <a class="small pull-right" href="/admin/forum/forumpost/{{ forum_post.id }}/change/"><i class="icon-edit"></i> Edit as Admin</a><br>
         {% endif %}
     </td>
     </tr>  {% endif %}  {% endfor %}  
