--- a/iyph/templates/iyph/iyphpage_detail.html
+++ b/iyph/templates/iyph/iyphpage_detail.html
@@ -1,6 +1,6 @@
-{% extends "baseiyph.html" %}
+{% extends "baseiyph.html"  %}
 
-{% load mezzanine_tags translate_tags staticfiles i18n %}
+{% load mezzanine_tags translate_tags static i18n %}
 
 {% block extra_css %}
   <link rel="stylesheet" href="{% static "css/DT_bootstrap.css" %}">
