--- a/iyph/templates/iyph/photolibrary.html
+++ b/iyph/templates/iyph/photolibrary.html
@@ -1,5 +1,5 @@
-{% extends "baseiyph.html" %}
-{% load mezzanine_tags translate_tags staticfiles i18n %}
+{% extends "baseiyph.html"  %}
+{% load mezzanine_tags translate_tags static i18n %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static "css/DT_bootstrap.css" %}">
 {% endblock %}
