--- a/iyph/templates/iyph/resources_list.html
+++ b/iyph/templates/iyph/resources_list.html
@@ -1,5 +1,5 @@
 {% extends "baseiyph.html" %}
-{% load i18n future mezzanine_tags iyph_tags keyword_tags disqus_tags %}
+{% load i18n   mezzanine_tags iyph_tags keyword_tags disqus_tags %}
 
 {% block meta_title %}{% if page %}{{ page.richtextpage.meta_title }}{% else %}{% trans "Iyph Resources list" %}{% endif %}{% endblock %}
 
@@ -40,7 +40,7 @@
 
     <div class="clearfix">
     
-    {% for category in results %}{{category|richtext_filter|safe}}{% endfor %}
+    {% for category in results %}{{category|richtext_filters|safe}}{% endfor %}
     </div>
 	
 
