--- a/iyph/templates/indexiyph.backup.html
+++ b/iyph/templates/indexiyph.backup.html
@@ -1,5 +1,5 @@
-{% extends "baseiyph.html" %}
-{% load i18n future mezzanine_tags iyph_tags keyword_tags disqus_tags %}
+{% extends "baseiyph.html"  %}
+{% load i18n  mezzanine_tags iyph_tags keyword_tags disqus_tags %}
 
 {% block meta_title %}{% if page %}{{ page.richtextpage.meta_title }}{% else %}{% trans "Iyph" %}{% endif %}{% endblock %}
 
