--- a/iyph/templates/iyph/chronology_detail.html
+++ b/iyph/templates/iyph/chronology_detail.html
@@ -1,5 +1,5 @@
 {% extends "baseiyph.html" %}
-{% load i18n future mezzanine_tags iyph_tags keyword_tags disqus_tags %}
+{% load i18n  mezzanine_tags  iyph_tags keyword_tags disqus_tags %}
 
 {% block meta_title %}{% if page %}{{ page.richtextpage.meta_title }}{% else %}{% trans "Iyph chronology: " %}{{chronology.title}}{% endif %}{% endblock %}
 
@@ -50,7 +50,7 @@
            <p><b>{{date_event}}, {{chronology.venue}}, {{chronology.country}} </b></p>
           <p>
                 {% with chronology|get_object_translation as translated_page %}
-                {{ translated_page.summary|richtext_filter|safe  }}
+                {{ translated_page.summary|richtext_filters|safe  }}
                 {% endwith %}
            </p>
          
@@ -119,11 +119,11 @@
         {% if user.is_superuser %}
             <h6>Posted: {{chronology.publish_date|date:"M Y" }}, by {{chronology.author}}</h6>    
             <h6>Updated {{chronology.modify_date|date:"M Y" }}, by {{chronology.author}}</h6>    
-            <a class="btn btn-small btn-success" href="/admin/iyph/chronology/{{ chronology.id }}" style="color:#fff;">Edit as Admin</a><br>
+            <a class="btn btn-small btn-success" href="/admin/iyph/chronology/{{ chronology.id }}/change/" style="color:#fff;">Edit as Admin</a><br>
         {% endif %}
         {% for g in request.user.groups.all %}
             {% if g.name == 'IYPH admin' %}
-              <a class="btn btn-small btn-success" href="/admin/iyph/chronology/{{ chronology.id }}" style="color:#fff;">Edit as Admin</a><br>
+              <a class="btn btn-small btn-success" href="/admin/iyph/chronology/{{ chronology.id }}/change/" style="color:#fff;">Edit as Admin</a><br>
             {% endif %}    
         {% endfor %}    
         {% if request.user.id == chronology.author_id %}
