--- a/iyph/templates/iyph/chronology_form.html
+++ b/iyph/templates/iyph/chronology_form.html
@@ -1,4 +1,4 @@
-{% load i18n future mezzanine_tags iyph_tags keyword_tags disqus_tags %}
+{% load i18n  mezzanine_tags iyph_tags  keyword_tags disqus_tags %}
 
 {% if form.non_field_errors or form.errors %}
 <div class="alert alert-error">{% trans "Please correct the errors below." %}
