--- a/iyph/templates/iyph/photo_create.html
+++ b/iyph/templates/iyph/photo_create.html
@@ -1,5 +1,5 @@
-{% extends "baseiyph.html" %}
-{% load pages_tags translate_tags mezzanine_tags i18n future staticfiles accounts_tags %}
+{% extends "baseiyph.html"  %}
+{% load pages_tags translate_tags mezzanine_tags i18n static accounts_tags %}
 
 {% block meta_title %}{% trans "Submit Photo" %} {% endblock %}
 
@@ -28,7 +28,7 @@
 <form enctype="multipart/form-data" class="customform" method="POST" >
     {% csrf_token %}
     <fieldset>
-       {% load pages_tags translate_tags mezzanine_tags ippc_tags i18n future staticfiles accounts_tags %} {# accounts_tags #}
+       {% load pages_tags translate_tags mezzanine_tags ippc_tags i18n static accounts_tags %} {# accounts_tags #}
        {%if message %}<div class="alert alert-error">{{message}}</div>{% endif %}
 {% if form.non_field_errors or form.errors or  f_form.errors %}
 <div class="alert alert-error">{% trans "Please correct the errors below." %}
