--- a/iyph/templates/iyph/photo_detail_2.html
+++ b/iyph/templates/iyph/photo_detail_2.html
@@ -1,4 +1,4 @@
-{% load pages_tags mezzanine_tags i18n future staticfiles accounts_tags ippc_tags %}
+{% load pages_tags mezzanine_tags i18n static  accounts_tags ippc_tags %}
 <div class="row">
 <!-- SX col-------------------------------->
     <div class="col-8" >
@@ -24,7 +24,7 @@
          <div class="padding20">
            <h2>{% trans "Related Info" %}</h2> 
             {% if user.is_superuser or perms.ippc.change_publication  %}
-                <p> <a class="btn btn-small btn-success" href="/admin/iyph/photo/{{photo.id}}" style="color:#fff;"><i class="icon-edit icon-white"></i> {% trans "Edit as admin" %}</a>     </p>
+                <p> <a class="btn btn-small btn-success" href="/admin/iyph/photo/{{photo.id}}/change/" style="color:#fff;"><i class="icon-edit icon-white"></i> {% trans "Edit as admin" %}</a>     </p>
                 {% if photo.modify_date %}
                     <br><strong>{% trans "Last updated: " %}</strong>{% blocktrans with sometime=photo.modify_date|date:"D, d M Y, H:i" %}{{ sometime }}{% endblocktrans %}
                 {% endif %}
