--- a/schedule/templates/schedule/_prevnext.html
+++ b/schedule/templates/schedule/_prevnext.html
@@ -1,4 +1,4 @@
-{% load scheduletags staticfiles %}
+{% load scheduletags static %}
 <div class="prevnext">
     <a href="{% prev_url target slug period %}">
       <img align="top" border="0" src="{% static "schedule/img/left_mod.png" %}"/>
