--- a/schedule/templates/schedule/occurrence.html
+++ b/schedule/templates/schedule/occurrence.html
@@ -1,5 +1,5 @@
 {% extends "schedule/base.html" %}
-{% load i18n staticfiles scheduletags %}
+{% load i18n static scheduletags %}
 
 {% block body %}
 <div class="navigation">
